--- a/src/styles/TodoGenerator.css
+++ b/src/styles/TodoGenerator.css
@@ -8,7 +8,7 @@ input[type=text] {
     color: rgb(0, 0, 0);
   }
 .button-style {
-    background-color: #4CAF50; /* Green */
+    background-color: #003274; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -19,3 +19,16 @@ input[type=text] {
     border-radius: 8px;
     margin:5px;
   }
+.button-delete{
+  background-color: #ff0000; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  margin:5px;
+  
+}
