--- a/src/styles/TodoGenerator.css
+++ b/src/styles/TodoGenerator.css
@@ -21,14 +21,12 @@ input[type=text] {
   }
 .button-delete{
   background-color: #ff0000; /* Green */
-  border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   border-radius: 8px;
   margin:5px;
-  
+  float: right;
 }
