--- a/src/styles/TodoGenerator.css
+++ b/src/styles/TodoGenerator.css
@@ -1,32 +1,11 @@
 input[type=text] {
     width:50%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    margin-right:3em;
     box-sizing: border-box;
     font-family: 'Inder', sans-serif; 
     font-size: 25px; 
     color: rgb(0, 0, 0);
   }
-.button-style {
-    background-color: #003274; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 8px;
-    margin:5px;
-  }
 .button-delete{
-  background-color: #ff0000; /* Green */
-  color: white;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 8px;
-  margin:5px;
   float: right;
 }
