[todo][jason]fix: db attribute ID changed to id

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@
   padding-bottom: 5px;
 }
 .bg {
-  background: url(https://i.ibb.co/87GbbFP/2799006.jpg) no-repeat;
+  background: url(https://upload.wikimedia.org/wikipedia/commons/8/8f/NativityChristmasLights2.jpg) no-repeat;
   background-size: cover;
   height: 100%;
   width: 100%;
