--- a/src/styles/TodoItem.css
+++ b/src/styles/TodoItem.css
@@ -1,7 +1,8 @@
 .box{
-    border: 3px dashed blue;
+    border: 3px solid rgb(39, 131, 250);
     width: 70%;
     margin:20px auto;
+    background-color: rgb(11, 180, 158);
     padding: 5px;
 }
 .itemContent { font-family: 'Inder', sans-serif; 
@@ -11,6 +12,5 @@
 }
 .done{
     text-decoration:line-through;
-    background-color: gray;
-    opacity: 80%;
+    opacity: 30%;
 }
